...
    @IBAction func previousDay(_ sender: Any) {
        currentDate = Calendar.current.date(byAdding: .day, value: -1, to: currentDate) ?? Date()
        updateDateDisplay()
    }
    
    func loadStartData() {
        divisions.append(DivisionFactory.createDivision(code: "Division 1", of:1))
        divisions.append(DivisionFactory.createDivision(code: "Division 2", of:2))
    }


}

...
