...
                                <rect key="frame" x="74" y="484" width="49" height="45"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Eval"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Eval"/>
...
                                <rect key="frame" x="129" y="738" width="30" height="45"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Minus"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="-"/>
...
                                <rect key="frame" x="114" y="602" width="61" height="45"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Enter"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Enter"/>
...
                                <rect key="frame" x="264" y="602" width="38" height="45"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="+/-"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="+/-"/>
...
                                <rect key="frame" x="339" y="738" width="30" height="45"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Divide"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="/"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jWN-TE-T3d">
                                <rect key="frame" x="125" y="209.5" width="30" height="45"/>
                                <accessibility key="accessibilityConfiguration" identifier="Seven"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="7"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="neK-al-C4Z">
                                <rect key="frame" x="192" y="353.5" width="30" height="45"/>
                                <accessibility key="accessibilityConfiguration" identifier="Two"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="2"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yad-vE-vV2">
                                <rect key="frame" x="259" y="353.5" width="30" height="45"/>
                                <accessibility key="accessibilityConfiguration" identifier="Three"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="3"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="27c-mT-hKT">
                                <rect key="frame" x="192" y="425.5" width="30" height="45"/>
                                <accessibility key="accessibilityConfiguration" identifier="Zero"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="0"/>
...
