...
        } else {
            calculationProblem(problem: "The input must be at least three operands long")
        }
    }
        
    func calculationProblem(problem: String) {
        let alertController = UIAlertController(title: "Problem in calculation", message: problem, preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "I understand", style: .default))
        self.present(alertController, animated: true, completion: nil)
        outputStack = []
        calculationStack = []
        currentInput = ""
        reloadDisplay()
...
